--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <!-- Media Query -->
     <link rel="stylesheet" href="css/mediaquery.css" media="screen">
 
-    <!-- #282929 cor verde brasil -->
 </head>
 <body>
     <header class="fixed-top">
@@ -44,7 +43,7 @@
 
         <nav class="navbar navbar-expand-lg navbarBottom d-flex align-items-center justify-content-center">
             <div class="container container-nav">
-                <img src="img/logo-jia-long.png" alt="" class="img img-logo">
+                <img src="img/logo-jia-long-pack.png" alt="" class="img img-logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
               </button>
@@ -80,8 +79,9 @@
         <!-- Main Banner -->
         <section class="img-fluid d-flex align-items-center" id="carousel-section">
             <div class="container">
-                <h1 class="text-center main-text">Jia Long Pack(efeito escrevendo)</h1>
+                <h1 class="text-center main-text">Jia Long Pack</h1>
                 <p class="text-center main-text">Desde 1958 produzindo máquinas de encartuchamento</p>
+                <p class="text-center"><i class="fa-solid fa-angle-down" style="color: #F2D422;"></i></p>
             </div>
         </section>
         <!-- End Main Banner -->
@@ -91,7 +91,7 @@
             <div class="container">
               <div class="row mb-5 row-products">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-1 d-flex align-items-center justify-content-center" id="img-col">
-                  <img src="/img/autoslotter.jpg" class="img-product img-fluid">
+                  <img src="img/flexo-printer.png" class="img-product img-fluid">
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-2 d-flex align-items-center justify-content-center" id="text-col-1">
                   <div class="content-1">
@@ -103,11 +103,11 @@
               </div>
               <div class="row mb-5 row-products">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-2 d-flex align-items-center justify-content-center" id="img-col">
-                  <img src="/img/autoslotter.jpg" class="img-product-right img-fluid">
+                  <img src="img/corrugator.png" class="img-product-right img-fluid">
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="text-col-2">
                   <div class="content-2">
-                    <h2>Flexo Printer</h2>
+                    <h2>Corrugator Laminator Inline</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
                     <a href="#" class="btn btn-outline-success">Contate-nos</a>
                   </div>
@@ -115,11 +115,11 @@
               </div>
               <div class="row mb-5 row-products">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-1 d-flex align-items-center justify-content-center" id="img-col">
-                  <img src="/img/autoslotter.jpg" class="img-product img-fluid">
+                  <img src="img/auto-folder.png" class="img-product img-fluid">
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-2 d-flex align-items-center justify-content-center" id="text-col-3">
                   <div class="content-3">
-                    <h2>Flexo Printer</h2>
+                    <h2>Auto Flder Gluer 4,6 Points I</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
                     <a href="#" class="btn btn-outline-success">Contate-nos</a>
                   </div>
@@ -127,11 +127,11 @@
             </div>
             <div class="row mb-5 row-products">
               <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-2 d-flex align-items-center justify-content-center" id="img-col">
-                <img src="/img/autoslotter.jpg" class="img-product-right img-fluid">
+                <img src="img/sample-maker.png" class="img-product-right img-fluid">
               </div>
               <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="text-col-4">
                 <div class="content-4">
-                  <h2>Flexo Printer</h2>
+                  <h2>Sample Maker S</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
                   <a href="#" class="btn btn-outline-success">Contate-nos</a>
                 </div>
@@ -142,10 +142,10 @@
         <!-- About Us Section -->
         <section class="container-fluid d-flex justify-content-center align-items-center" id="about-us-section">
             <div class="row row-about-us">
-              <div class="col-12 col-sm-6 d-flex justify-content-center">
-                <img src="/img/jialong-team.jpg" class="img-fluid img-about-us">
+              <div class="col-12 col-md-6 d-flex justify-content-center">
+                <img src="img/jialong-team.jpg" class="img-fluid img-about-us">
               </div>
-              <div class="col-12 col-sm-6 d-flex align-items-center">
+              <div class="col-12 col-md-6 d-flex align-items-center">
                 <div class="content-about-us">
                   <h2 class="text-center">ESTAMOS NO NEGÓCIO HÁ MAIS DE 65 ANOS</h2>
                   <p class="text-center">A Jia Long Pack foi fundada em 1958, e com seu trabalho dedicado deu os primeiros passos na produção de máquinas de encartuchamento.</p>
@@ -159,14 +159,18 @@
         <section class="container-fluid d-flex justify-content-center align-items-center" id="tradition-section">
           <div class="container d-flex justify-content-center align-items-center">
             <div class="row row-about-us row-tradition">
-              <div class="col-md-12 col-lg-6 order-1  d-flex justify-content-center align-items-center">
-                <div class="w-75">
-                  <h2 class="text-white">O QUE NOS DIFERE DOS OUTROS?</h2>
-                  <p>Décadas de experiência com as mais diversas solicitações de clientes ao redor do mundo nos incentivaram a construir uma marca forte e estável baseada em fortes atributos, como:</p>
-                </div>
+              <div class="col-md-12 col-lg-6 order-1 d-flex justify-content-center align-items-center" id="grid-right-tradition">
+                  <div class="">
+                    <h2 class="text-white text-center">QUAL O DIFERENCIAL?</h2>
+                    <p class="text-center m-auto">Décadas de experiência com as mais diversas solicitações de clientes ao redor do mundo nos incentivaram a construir uma marca forte e estável baseada em fortes atributos, como:</p>
+                  </div>
               </div>
-              <div class="col-md-12 col-lg-6 order-2">
-                  <div class="box">
+              <div class="col-md-12 col-lg-6 order-2" id="grid-left-tradition">
+                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta1"></i>
+                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta2"></i>
+                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta3"></i>
+                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta4"></i>
+                  <div class="box top">
                     <h3 class="text-white">Tradição</h3>
                     <p>Por mais de quatro décadas, cooperamos com sucesso com clientes em todo o mundo.</p>
                   </div>
@@ -178,7 +182,7 @@
                     <h3 class="text-white">Inovação</h3>
                     <p>Estamos constantemente melhorando a tecnologia e introduzindo novos produtos em nossos produtos.</p>
                   </div>
-                  <div class="box">
+                  <div class="box bottom">
                     <h3 class="text-white">Eficiência</h3>
                     <p>Um serviço rápido, confiável e eficiente é um dos nossos maiores benefícios.</p>
                   </div>
@@ -188,10 +192,140 @@
       </section>   
       <!-- End Tradicao Section --> 
       <!-- YouTube Section -->
-      <section class="container-fluid" id="youtube-section">
+      <section class="container-fluid d-flex align-items-center" id="youtube-first-section">
+        <div class="container">
+          <h2 class="text-white"><i class="fa-brands fa-youtube" style="color: #fff;"></i> YouTube</h2>
+          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab enim quibusdam facere. Sint delectus tempora adipisci. Mollitia consequatur ea molestiae eos laudantium, ex optio a qui est minus! Perferendis, inventore.</p>
+          <a href="http://" class="btn btn-outline-light">VER CANAL DO YOUTUBE</a>
+        </div>
+      </section>
 
+      <section class="container-fluid" id="youtube-second-section">
+        <div class="container d-flex justify-content-center align-items-center">
+          <div class="row row-videos">
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-videos">
+              <div class="box-video">
+                <iframe class="object-fit-contain" width="360" height="202" src="https://www.youtube.com/embed/I3MKvtOIQpM" title="Paper Lunch Box" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- End YouTube Section -->
+      <!-- Gallery Section -->
+      <section class="container-fluid d-flex align-items-center" id="gallery-first-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 order-2 order-md-1">
+              <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/produtos/3.jpg" class="d-block img-fluid object-fit-fill" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/produtos/4.jpg" class="d-block img-fluid" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/produtos/5.jpg" class="d-block img-fluid" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 order-1 order-md-2 d-flex align-items-center" id="col-gallery">
+              <div class="box-content">
+                <h2 class="text-white">Resultado de Nossas Máquinas</h2>
+                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab enim quibusdam facere. Sint delectus tempora adipisci. Mollitia consequatur ea molestiae eos laudantium, ex optio a qui est minus! Perferendis, inventore.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End Gallery Section-->
+      <!--Contact-Us-->
+      <section class="container-fluid d-flex align-items-center" id="contact-us-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 col-form">
+              <form>
+                <h3 class="mb-4 texto-com-linha">Entre em Contato Conosco</h3>
+                <div class="mb-3">
+                  <input type="text" class="form-control form-input" name="nome" id="name-input" placeholder="Nome" required>
+                </div>
+                <div class="mb-3">
+                  <input type="email" class="form-control form-input" name="nome" id="email-input" placeholder="Seu e-mail" requires>
+                </div>
+                <div class="mb-3">
+                  <input type="tel" class="form-control form-input" name="nome" id="tel-input" placeholder="Telefone" requires>
+                </div>
+                <div class="mb-3">
+                  <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem"></textarea>
+                </div>
+                <button type="submit" class="btn btn-outline-dark">Submit</button>
+              </form>
+            </div>
+            <div class="col-12 col-md-6">
+              <div class="box-content-contact">
+                <img src="img/logohorizontal.png" alt="" class="img-fluid" id="logo-footer">
+              </div>
+              <div class="box-content-info">
+                <p>Diretor Geral: Jun Wang</p>
+                <p><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 63 7819 585 (Inglês)</p>
+                <p><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 64 1177 399 (Sérvio)</p>
+                <p><i class="fa-brands fa-whatsapp" style="color: #F2D422"></i> +86133 775 83 611</p>
+                <p><i class="fa-regular fa-envelope" style="color: #F2D422"></i> jialongpack@vip.126.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End Contact-Us-->
     </main>
+    <footer>
+      <!--Footer-->
+      <section class="container-fluid" id="footer-section">
+        <div class="container">
+          <div class="footer-content">
+            <p class="footer-index text-center">
+              <a href="">Políticas de Privacidade</a> | <a href="">Termos de Uso</a><br>
+              <a class="mt-4" href="https://jrmtecnologia.com"><strong>JIA LONG ©</strong></a> 2023 - Desenvolvido por: <a href="https://jrmtecnologia.com"><strong>JRM Tecnologia</strong></a>
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--End Footer-->
+    </footer>
 </body>
 </html>
