--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!-- End About Us Section -->
         <!-- Tradicao Section -->
         <section class="container-fluid d-flex justify-content-center align-items-center" id="tradition-section">
-          <div class="container d-flex justify-content-center align-items-center">
+          <div class="container d-flex justify-content-center align-items-center position-relative">
             <div class="row row-about-us row-tradition">
               <div class="col-md-12 col-lg-6 order-1 d-flex justify-content-center align-items-center" id="grid-right-tradition">
                   <div class="">
