--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                   </div>
               </div>
               <div class="col-md-12 col-lg-6 order-2" id="grid-left-tradition">
-                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta1"></i>
-                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta2"></i>
-                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta3"></i>
-                <i class="fa-solid fa-angle-down" style="color: #F2D422;" id="seta4"></i>
+                <i class="fa-solid fa-angle-right" style="color: #F2D422;" id="seta1"></i>
+                <i class="fa-solid fa-angle-right" style="color: #F2D422;" id="seta2"></i>
+                <i class="fa-solid fa-angle-right" style="color: #F2D422;" id="seta3"></i>
+                <i class="fa-solid fa-angle-right" style="color: #F2D422;" id="seta4"></i>
                   <div class="box top">
                     <h3 class="text-white">Tradição</h3>
                     <p>Por mais de quatro décadas, cooperamos com sucesso com clientes em todo o mundo.</p>
