--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <section class="container-fluid d-flex align-items-center" id="gallery-first-section">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 order-2 order-md-1">
+            <div class="col-md-6 order-2 order-md-1 d-flex align-items-center">
               <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -304,10 +304,10 @@
               </div>
               <div class="box-content-info">
                 <p>Diretor Geral: Jun Wang</p>
-                <p><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 63 7819 585 (Inglês)</p>
-                <p><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 64 1177 399 (Sérvio)</p>
-                <p><i class="fa-brands fa-whatsapp" style="color: #F2D422"></i> +86133 775 83 611</p>
-                <p><i class="fa-regular fa-envelope" style="color: #F2D422"></i> jialongpack@vip.126.com</p>
+                <p class="text-black"><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 63 7819 585 (Inglês)</p>
+                <p class="text-black"><i class="fa-solid fa-phone" style="color: #F2D422"></i> +381 64 1177 399 (Sérvio)</p>
+                <p class="text-black"><i class="fa-brands fa-whatsapp" style="color: #F2D422"></i> +86133 775 83 611</p>
+                <p class="text-black"><i class="fa-regular fa-envelope" style="color: #F2D422"></i> jialongpack@vip.126.com</p>
               </div>
             </div>
           </div>
