--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css" media="all">
     <!-- Media Query -->
     <link rel="stylesheet" href="css/mediaquery.css" media="screen">
+    <meta name="format-detection" content="telephone=no">
 
 </head>
 <body>
