--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about-us-section">Sobre Nós</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="#products-section">Produtos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link" href="#about-us-section">Sobre Nós</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Notícias</a>
+                    <a class="nav-link" href="#youtube-first-section">Youtube</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">YouTube</a>
+                    <a class="nav-link" href="#gallery-first-section">Resultados</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact-us-section">Contate-nos</a>
                   </li>
                 </ul>
               </div>
