--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <div class="content-1">
                     <h2>Flexo Printer</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
-                    <a href="#" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
               </div>
@@ -110,7 +110,7 @@
                   <div class="content-2">
                     <h2>Corrugator Laminator Inline</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
-                    <a href="#" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
               </div>
@@ -122,7 +122,7 @@
                   <div class="content-3">
                     <h2>Auto Flder Gluer 4,6 Points I</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
-                    <a href="#" class="btn btn-outline-success">Contate-nos</a>
+                    <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 <div class="content-4">
                   <h2>Sample Maker S</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
-                  <a href="#" class="btn btn-outline-success">Contate-nos</a>
+                  <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                 </div>
               </div>
             </div>
