--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <div class="mb-3">
                   <textarea class="form-control" id="textArea" rows="4" placeholder="Digite sua mensagem"></textarea>
                 </div>
-                <button type="submit" class="btn btn-outline-dark">Submit</button>
+                <button type="submit" class="btn btn-outline-dark">Enviar</button>
               </form>
             </div>
             <div class="col-12 col-md-6">
