--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="container">
           <h2 class="text-white"><i class="fa-brands fa-youtube" style="color: #fff;"></i> YouTube</h2>
           <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab enim quibusdam facere. Sint delectus tempora adipisci. Mollitia consequatur ea molestiae eos laudantium, ex optio a qui est minus! Perferendis, inventore.</p>
-          <a href="http://" class="btn btn-outline-light">VER CANAL DO YOUTUBE</a>
+          <a href="https://www.youtube.com/@jialongpackdoo7728" class="btn btn-outline-light">VER CANAL DO YOUTUBE</a>
         </div>
       </section>
 
