--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-2 d-flex align-items-center justify-content-center" id="text-col-1">
                   <div class="content-1">
                     <h2>Flexo Printer</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
+                    <p>A FlexoPrinter é uma impressora versátil e eficiente. Com sua tecnologia flexográfica de ponta, imprime com precisão e qualidade excepcional em uma variedade de materiais. Aumente a produtividade e eleve a qualidade de suas impressões com nossa solução de impressão flexível e confiável.</p>
                     <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
@@ -108,8 +108,8 @@
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="text-col-2">
                   <div class="content-2">
-                    <h2>Corrugator Laminator Inline</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
+                    <h2>Corrugator Laminator Em Linha</h2>
+                    <p>Esta máquina de última geração proporciona uma produção contínua e eficaz de embalagens de papelão ondulado laminado, garantindo resistência e qualidade superior. Ideal para quem busca embalagens personalizadas e de alto desempenho, esta solução inovadora oferece eficiência e confiabilidade incomparáveis.</p>
                     <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
@@ -120,8 +120,8 @@
                 </div>
                 <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-2 d-flex align-items-center justify-content-center" id="text-col-3">
                   <div class="content-3">
-                    <h2>Auto Flder Gluer 4,6 Points I</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
+                    <h2>Auto Flder Gluer 4,6</h2>
+                    <p>Esta máquina automatizada realiza dobragem e colagem de papelão ondulado com facilidade, oferecendo qualidade excepcional e personalização para suas embalagens. Com capacidade para lidar com papelão de até 4,6 pontos de espessura, esta máquina é a escolha ideal para produções em larga escala.</p>
                     <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                   </div>
                 </div>
@@ -133,7 +133,7 @@
               <div class="col-12 order-2 col-md-6 col-sm-5 order-sm-1 d-flex align-items-center justify-content-center" id="text-col-4">
                 <div class="content-4">
                   <h2>Sample Maker S</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cum temporibus aliquid aperiam sed, molestias sequi asperiores quisquam autem doloremque quae accusamus consequatur aliquam illum optio? Optio tempora culpa cumque?</p>
+                  <p>Esta linha de máquinas de última geração é projetada para transformar conceitos em realidade, permitindo a produção eficiente e precisa de protótipos e amostras. Cortando, vincando e perfurando uma variedade de materiais, desde papelão até plástico, essa série oferece flexibilidade e qualidade incomparáveis. Ideal para designers e fabricantes que valorizam a excelência.</p>
                   <a href="#contact-us-section" class="btn btn-outline-success">Contate-nos</a>
                 </div>
               </div>
@@ -198,7 +198,7 @@
       <section class="container-fluid d-flex align-items-center" id="youtube-first-section">
         <div class="container">
           <h2 class="text-white"><i class="fa-brands fa-youtube" style="color: #fff;"></i> YouTube</h2>
-          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab enim quibusdam facere. Sint delectus tempora adipisci. Mollitia consequatur ea molestiae eos laudantium, ex optio a qui est minus! Perferendis, inventore.</p>
+          <p class="text-white">Convidamos você a explorar nosso canal no YouTube para ver nossas máquinas em funcionamento. Abaixo, apresentamos alguns vídeos do canal, permitindo que você mergulhe na excelência e eficiência de nossos equipamentos. Não perca a oportunidade de testemunhar a tecnologia em ação!</p>
           <a href="https://www.youtube.com/@jialongpackdoo7728" class="btn btn-outline-light">VER CANAL DO YOUTUBE</a>
         </div>
       </section>
@@ -270,7 +270,7 @@
             <div class="col-12 col-md-6 order-1 order-md-2 d-flex align-items-center" id="col-gallery">
               <div class="box-content">
                 <h2 class="text-white">Resultado de Nossas Máquinas</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab enim quibusdam facere. Sint delectus tempora adipisci. Mollitia consequatur ea molestiae eos laudantium, ex optio a qui est minus! Perferendis, inventore.</p>
+                <p class="text-white">Descubra a excelência em cada detalhe através do nosso carrossel de produtos. Admire a qualidade impecável e o design deslumbrante de embalagens feitas por nossas máquinas, mostrando a maestria em cada peça.</p>
               </div>
             </div>
           </div>
