reduzir linhas do js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Product Section -->
         <section class="" id="products-section">
             <div class="container">
-              <div class="row mb-5 row-products" id="flexoprinter">
+              <div class="row mb-5 row-products" id="item-1">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-1 d-flex align-items-center justify-content-center" id="img-col">
                   <img src="img/flexo-printer.png" class="img-product img-fluid">
                 </div>
@@ -89,7 +89,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row mb-5 row-products" id="corrugadora">
+              <div class="row mb-5 row-products" id="item-2">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-2 d-flex align-items-center justify-content-center" id="img-col">
                   <img src="img/corrugator.png" class="img-product-right img-fluid">
                 </div>
@@ -101,7 +101,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row mb-5 row-products" id="dobradora">
+              <div class="row mb-5 row-products" id="item-3">
                 <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-1 d-flex align-items-center justify-content-center" id="img-col">
                   <img src="img/auto-folder.png" class="img-product img-fluid">
                 </div>
@@ -113,7 +113,7 @@
                   </div>
                 </div>
             </div>
-            <div class="row mb-5 row-products" id="prototipos">
+            <div class="row mb-5 row-products" id="item-4">
               <div class="col-12 order-1 col-md-6 col-sm-7 order-sm-2 d-flex align-items-center justify-content-center" id="img-col">
                 <img src="img/sample-maker.png" class="img-product-right img-fluid">
               </div>
