--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/animationNav.js"></script>
+    <script src="js/animationAll.js"></script>
 </body>
 </html>
