--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#products-section">Produtos</a>
+                    <a class="nav-link" href="#arrow-down">Produtos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about-us-section">Sobre Nós</a>
+                    <a class="nav-link" href="#text-col-4">Sobre Nós</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#youtube-first-section">Youtube</a>
+                    <a class="nav-link" href="#lastTradicao">Youtube</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#gallery-first-section">Resultados</a>
+                    <a class="nav-link" href="#video6">Resultados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contact-us-section">Contate-nos</a>
+                    <a class="nav-link" href="#col-gallery">Contate-nos</a>
                   </li>
                 </ul>
               </div>
@@ -69,7 +69,7 @@
             <div class="container">
                 <h1 class="text-center main-text">Jia Long Pack</h1>
                 <p class="text-center main-text">Desde 1958 produzindo máquinas de encartuchamento</p>
-                <p class="text-center"><i class="fa-solid fa-angle-down" style="color: #F2D422;"></i></p>
+                <p class="text-center"><i class="fa-solid fa-angle-down" id="arrow-down" style="color: #F2D422;"></i></p>
             </div>
         </section>
         <!-- End Main Banner -->
@@ -174,7 +174,7 @@
                     <h3 class="text-white">Inovação</h3>
                     <p>Estamos constantemente melhorando a tecnologia e introduzindo novos produtos em nossos produtos.</p>
                   </div>
-                  <div class="box bottom">
+                  <div class="box bottom" id="lastTradicao">
                     <h3 class="text-white">Eficiência</h3>
                     <p>Um serviço rápido, confiável e eficiente é um dos nossos maiores benefícios.</p>
                   </div>
