--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
         <nav class="navbar navbar-expand-lg d-flex align-items-center justify-content-center" id="navbarBottom">
             <div class="container container-nav">
+              <a href="#">
                 <img src="img/logo-jia-long-pack.png" alt="" class="img img-logo">
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
               </button>
