--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <button type="submit" class="btn btn-outline-dark" data-button>Enviar</button>
               </form>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mb-5">
               <div class="box-content-contact">
                 <img src="img/logohorizontal.png" alt="" class="img-fluid" id="logo-footer">
               </div>
